--- a/app/src/main/res/layout/fragment_activity_home.xml
+++ b/app/src/main/res/layout/fragment_activity_home.xml
@@ -163,6 +163,10 @@
             app:layout_constraintTop_toBottomOf="@+id/btn_police" />
 
     </android.support.constraint.ConstraintLayout>
+    <FrameLayout
+        android:id="@+id/frame_support"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></FrameLayout>
 
 
 </RelativeLayout>
