--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -24,14 +24,15 @@
             android:layout_height="wrap_content">
 
             <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="match_parent"
-            android:layout_height="240dp"
-            app:srcCompat="@drawable/gradient_bg"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
+                android:layout_width="match_parent"
+                android:layout_height="240dp"
+                app:srcCompat="@drawable/gradient_bg"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="0dp"
+                />
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/img_round"
                 android:layout_width="170dp"
                 android:layout_height="170dp"
                 android:layout_alignParentTop="true"
@@ -39,19 +40,22 @@
                 android:layout_marginTop="28dp"
                 android:src="@drawable/add_pp" />
 
-            <EditText
+
+            <TextView
                 android:id="@+id/edit_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="201dp"
-                android:layout_marginEnd="93dp"
-                android:ems="10"
+                android:layout_marginTop="202dp"
+                android:layout_marginEnd="136dp"
+                android:textColor="@color/sub_text_black"
+                android:textStyle="bold"
+                android:background="@android:color/transparent"
+                android:ems="8"
                 android:gravity="center_horizontal"
                 android:hint="Username"
-                android:background="@android:color/transparent"
-                android:padding="10dp" />
+                android:padding="10dp"/>
         </RelativeLayout>
 
     <LinearLayout
@@ -258,6 +262,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginStart="0dp"
                 android:layout_marginBottom="0dp"
+                android:inputType="textPassword"
                 android:ems="9" />
         </LinearLayout>
 
@@ -287,7 +292,7 @@
                 android:layout_marginStart="0dp"
                 android:layout_marginBottom="0dp"
                 android:ems="9"
-                android:inputType="textPersonName"
+                android:inputType="textPassword"
                 />
 
         </LinearLayout>
@@ -335,11 +340,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
+                    android:layout_marginTop="1dp"
                     android:layout_marginEnd="8dp"
-                    android:text="Update"
-                    android:padding="10dp"
-                    android:textStyle="bold"
+                    android:layout_marginBottom="1dp"
                     android:background="@drawable/message_container"
+                    android:padding="10dp"
+                    android:text="Update"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
