--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,27 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity_profile">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    </ScrollView>
 
     <ImageView
-        android:id="@+id/imageView3"
         android:layout_width="match_parent"
         android:layout_height="240dp"
         app:srcCompat="@drawable/gradient_bg"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:layout_editor_absoluteY="0dp"
+        />
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/img_round"
         android:layout_width="170dp"
         android:layout_height="170dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp"
         android:src="@drawable/add_pp" />
+
 
     <TextView
         android:id="@+id/username"
@@ -39,172 +37,193 @@
         android:ems="8"
         android:gravity="center_horizontal"
         android:hint="Username"
-        android:padding="10dp" />
+        android:textColor="@color/sub_text_black"
+        android:textStyle="bold"
+        android:padding="10dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView3"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="-1dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="248dp"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:background="@android:color/transparent"
+                android:ems="8"
+                android:padding="10dp"
+                android:text="Full Name" />
+
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:layout_marginLeft="20dp"
-                android:padding="10dp"
-                android:ems="8"
-                android:text="Full Name" />
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text=" : "
-                android:textColor="@color/sub_text_black"
-                android:background="@android:color/transparent"/>
+                android:textColor="@color/sub_text_black" />
+
             <TextView
                 android:id="@+id/fullname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
                 android:ems="10"
-                android:textColor="@color/sub_text_black"
-                android:background="@android:color/transparent"/>
+                android:textColor="@color/sub_text_black" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:background="@android:color/transparent"
+                android:ems="8"
+                android:padding="10dp"
+                android:text="Date of Birth" />
+
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:layout_marginLeft="20dp"
-                android:padding="10dp"
-                android:ems="8"
-                android:text="Date of Birth" />
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text=" : "
-                android:textColor="@color/sub_text_black"
-                android:background="@android:color/transparent"/>
+                android:textColor="@color/sub_text_black" />
+
             <TextView
                 android:id="@+id/date_of_birth"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
                 android:ems="10"
-                android:textColor="@color/sub_text_black"
-                android:background="@android:color/transparent"/>
+                android:textColor="@color/sub_text_black" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:background="@android:color/transparent"
+                android:ems="8"
+                android:padding="10dp"
+                android:text="Email Address" />
+
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:layout_marginLeft="20dp"
-                android:padding="10dp"
-                android:ems="8"
-                android:text="Email Address" />
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text=" : "
-                android:textColor="@color/sub_text_black"
-                android:background="@android:color/transparent"/>
+                android:textColor="@color/sub_text_black" />
+
             <TextView
                 android:id="@+id/email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
                 android:ems="10"
-                android:textColor="@color/sub_text_black"
-                android:background="@android:color/transparent"/>
+                android:textColor="@color/sub_text_black" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:background="@android:color/transparent"
+                android:ems="8"
+                android:padding="10dp"
+                android:text="Phone Number" />
+
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:layout_marginLeft="20dp"
-                android:padding="10dp"
-                android:ems="8"
-                android:text="Phone Number" />
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text=" : "
-                android:textColor="@color/sub_text_black"
-                android:background="@android:color/transparent"/>
+                android:textColor="@color/sub_text_black" />
+
             <TextView
                 android:id="@+id/phone_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
                 android:ems="10"
-                android:textColor="@color/sub_text_black"
-                android:background="@android:color/transparent"/>
+                android:textColor="@color/sub_text_black" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:background="@android:color/transparent"
+                android:ems="8"
+                android:padding="10dp"
+                android:text="Assist" />
+
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:layout_marginLeft="20dp"
-                android:padding="10dp"
-                android:ems="8"
-                android:text="Assist" />
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text=" : "
-                android:textColor="@color/sub_text_black"
-                android:background="@android:color/transparent"/>
+                android:textColor="@color/sub_text_black" />
+
             <TextView
                 android:id="@+id/assist"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
                 android:ems="10"
-                android:textColor="@color/sub_text_black"
-                android:background="@android:color/transparent"/>
+                android:textColor="@color/sub_text_black" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:background="@android:color/transparent"
+                android:ems="8"
+                android:padding="10dp"
+                android:text="Document Image" />
+
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:layout_marginLeft="20dp"
-                android:padding="10dp"
-                android:ems="8"
-                android:text="Document Image" />
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text=" : "
-                android:textColor="@color/sub_text_black"
-                android:background="@android:color/transparent"/>
+                android:textColor="@color/sub_text_black" />
+
             <Button
                 android:id="@+id/btn_displayImage"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
-                android:background="@drawable/message_container"
                 android:layout_marginLeft="20dp"
-                android:text="View"/>
+                android:background="@drawable/message_container"
+                android:text="View" />
         </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -220,19 +239,23 @@
                     android:id="@+id/btn_edit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="23dp"
+                    android:layout_marginEnd="48dp"
                     android:padding="10dp"
-                    android:textSize="18dp"
                     android:text="Edit Profile"
+                    android:textSize="18dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.0" />
 
             </android.support.constraint.ConstraintLayout>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp">
+
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -244,7 +267,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="16dp"
                     android:background="@drawable/button"
                     android:elegantTextHeight="false"
                     android:padding="-5sp"
@@ -255,7 +278,6 @@
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.497"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/txt_password"
                     app:layout_constraintVertical_bias="0.294" />
